# Robosub-Onboard

./: .gitignore  CMakeLists.txt  README.md
arduino/SimpleIMUFirmware/: SimpleIMUFirmware.ino
arduino/_9DoF_Razor_M0_Firmware/: _9DoF_Razor_M0_Firmware.ino  config.h
arduino/commtest/: commtest.ino
arduino/commtest2/: commtest2.ino  robosub-serial.h
arduino/imu/: imu.ino
arduino/motorcontroltest/: motorcontroltest.ino  robosub-serial.h
arduino/telemetrytest/: serialencodingv1.cpp  telemetrytest.ino
cpp/: robot.cpp  server.cpp  video.h
